c4prj1_deck/grade.txt
Grading at Fri Aug 31 21:26:49 UTC 2018
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:41:32: error: incompatible types when assigning to type ‘card_t * {aka struct card_tag *}’ from type ‘card_t {aka struct card_tag}’
   deck->cards[deck->n_cards-1] = c;
                                ^
Compilation of deck.c failed

Overall Grade: F
